@@ -1,4 +1,5 @@
 [CW7]
++ SyncProxyAndroid SDK: add new parameters to SetDisplayLayoutResponse class.
 + Policy Table: read Snapshot file, response with Update file
 + Add secondaryGraphic parameter to Show UI.
 + SyncProxyAndroid SDK: Add secondaryGraphic parameter to Show request.
